--- a/battleship/src/App.css
+++ b/battleship/src/App.css
@@ -1,23 +1,25 @@
 .App {
+  height: 100vh;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  /*height: 100px;*/
+  background: gold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/* style for footer */
+
+footer {
+  /*height: 100px;*/
+  background: skyblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+svg[data-icon="heart"] {
+  color: #e25555;
 }
+
+
