make ship divs and style them such that they are on top of the right cells

--- a/battleship/src/Components/GameBoard.css
+++ b/battleship/src/Components/GameBoard.css
@@ -1,6 +1,5 @@
 .board {
-    height: 300px;
-    width: 300px;
+    position: relative;
     border: 1px solid black;
     display: grid;
     grid-template: repeat(10, 1fr) / repeat(10, 1fr);
