--- a/battleship/src/Components/Cell.css
+++ b/battleship/src/Components/Cell.css
@@ -4,3 +4,11 @@
     border: 1px solid black;
     cursor: pointer;
 }
+
+.hit {
+    background-color: red;
+}
+
+.miss {
+    background-color: gray;
+}
