--- a/src/Components/GameBoardContainer.css
+++ b/src/Components/GameBoardContainer.css
@@ -1,7 +1,30 @@
 .gameboard-container {
+    /*display: flex;*/
+}
+
+.flex {
     display: flex;
 }
 
-.pause {
-    opacity: 0.6;
+.number {
+    height: 40px;
+    width: 40px;
+    display: flex;
+    border: 1px solid black;
+}
+
+.bottom-tab {
+    display: flex;
+    height: 40px;
+    border: 1px solid black;
+}
+
+.side-tab .number {
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.bottom-tab .number {
+    align-items: flex-start;
+    justify-content: center;
 }
