--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,22 @@
 }
 
 header {
-  /*height: 100px;*/
+  height: 90px;
   background: gold;
 }
 
-
+h1 {
+  margin-top: 20px;
+}
 /* style for footer */
 
 footer {
-  /*height: 100px;*/
-  background: skyblue;
+  height: 80px;
+  background-color: deepskyblue;
+}
+
+footer p {
+  margin-top: 10px;
 }
 
 svg[data-icon="heart"] {
