--- a/src/Components/GameRibbon.css
+++ b/src/Components/GameRibbon.css
@@ -7,7 +7,20 @@
 }
 
 .banner {
+    display: flex;
+    flex: 1;
+    justify-content: space-around;
+}
+
+.banner h2{
     background-color: white;
     padding: 10px;
     border-radius: 10px;
 }
+
+
+.banner h2:hover {
+    cursor: pointer;
+}
+
+
