--- a/src/Components/GameRibbon.css
+++ b/src/Components/GameRibbon.css
@@ -1,9 +1,9 @@
 .game-ribbon {
-    height: 80px;
+    height: 100px;
     background: #e25555;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
 }
 
 .banner {
